# delft-haskell-study-group

./: README.md
notes/: README.md  study-group-notes.cabal
notes/src/Chapter10/: RewriteWithFold.hs  WarmUp.hs
notes/src/Chapter11/: AsPatterns.hs  Ciphers.hs  HuttonsRazor.hs  Language.hs  Phone.hs
notes/src/Chapter12/: BinaryTree.hs  ItsOnlyNatural.hs  SmallLibraryForEither.hs  SmallLibraryForMaybe.hs  StringProcessing.hs  Unfold.hs  ValidateTheWord.hs
notes/src/Chapter13/: Ciphers.hs  Palindrome.hs  Person.hs
notes/src/Chapter14/: WordNumber.hs
notes/src/Chapter15/: Monoid.hs  Semigroup.hs
notes/src/Chapter16/: CanItBeFunctor.hs  Instances.hs  RearrangeTheArguments.hs
notes/src/Chapter17/: Combinations.hs  Instances.hs  SpecializeTheTypes.hs
notes/src/Chapter18/: Functions.hs  Instances.hs
notes/src/Chapter20/: Instances.hs  Library.hs
notes/src/Chapter21/: Instances.hs  Tree.hs
notes/src/Chapter22/: Shawty.hs  WarmUp.hs
notes/src/Chapter23/: Exercises.hs
notes/src/Chapter4/: CorrectingSyntax.hs  Exercises.hs
notes/src/Chapter5/: DetermineTheTypes.hs  DoesItCompile.hs  FixIt.hs  TypeKwonDo.hs  WhatKindOfType.hs  WriteTheFunction.hs  WriteTheSignature.hs
notes/src/Chapter6/: DoesItTypecheck.hs  MatchTheTypes.hs  TypeKwonDo.hs
notes/src/Chapter7/: MultipleChoice.hs  WriteSomeCode.hs
notes/src/Chapter8/: FixDivideBy.hs  McCarthy91.hs  NumbersIntoWords.hs  Recursion.hs  ReviewOfCurrying.hs  ReviewOfTypes.hs
notes/src/Chapter9/: Ciphers.hs  DataChar.hs  StandardFunctions.hs
notes/tests/: tests.hs
notes/tests/Chapter14/: QuickCheck.hs  (+1 more)
