name:                study-group-notes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/txsmith/delft-haskell-study-group/tree/master/notes#readme
license:             BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter4.Exercises
                     , Chapter4.CorrectingSyntax
                     , Chapter5.DetermineTheTypes
                     , Chapter5.DoesItCompile
                     , Chapter5.WriteTheSignature
                     , Chapter5.WriteTheFunction
                     , Chapter5.FixIt
                     , Chapter5.TypeKwonDo
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
